--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -6,4 +6,6 @@ header{
     background-color: var(--header);
     padding: 15px;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
 }
