--- a/CSS/geral/geral.css
+++ b/CSS/geral/geral.css
@@ -1,8 +1,75 @@
-@font-face {
-    font-family:padrao;
-    src: url(https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap);
-}
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 *{
-    font-family: padrao;
+    font-family:Lato;
+    margin: 0px;
+    padding: 0px;
+}
+
+:root{
+    --blackColor: black;
+    --principalColor: #2AB64D;
+    --greyColor: #737373
+}
+
+.desktop{
+    display: none;
+}
+
+header{
+    background-color: var(--blackColor);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
+h1{
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    padding: 15px 0px;
+}
+
+.containerMenu{
+    background-color: var(--principalColor);
+    text-align: center;
+}
+
+.btnMenu{
+    color: var(--blackColor);
+    font-size: 4em;
+    padding: 15px;
+}
+
+
+main{
+    margin: 130px 15px 15px 15px;
+}
+
+
+.textBasic{
+    color: var(--greyColor);
+    font-size: 0.8em;
+}
+
+nav{
+    background-color: var(--blackColor);
+    color: var(--principalColor);
+    font-weight: normal;
+    width: 100%;
+    box-sizing: border-box;
+    display: none;
+}
+
+nav> ul > li {
+    list-style: none;
+    padding: 10px;
+    box-sizing: border-box;
+    text-align: center;
+    border-bottom: 3px solid var(--greyColor);
 }
