--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -1,11 +1,18 @@
-:root{
-    --header: black;
-}
 
-header{
-    background-color: var(--header);
-    padding: 15px;
-    box-sizing: border-box;
+.buttonsLine{
+    margin: 0 auto;
+    width: 90%;
+    height: 70px;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
+
+.buttonsLine > button{
+    width: 30%;
+    height: 80%;
+    border: 3px solid black;
+    background-color: white;
+}
+
