--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -1,3 +1,4 @@
+@import url('../geral/geral.css');
 
 .buttonsLine{
     margin: 0 auto;
@@ -9,10 +10,15 @@
     justify-content: space-between;
 }
 
-.buttonsLine > button{
+.btn{
     width: 30%;
     height: 80%;
     border: 3px solid black;
     background-color: white;
+    transition: all .4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
+.btn:hover, .btn:checked{
+    transition: all .4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    background-color: var(--principalColor);
+}
