--- a/CSS/geral/geral.css
+++ b/CSS/geral/geral.css
@@ -9,7 +9,8 @@
 :root{
     --blackColor: black;
     --principalColor: #2AB64D;
-    --greyColor: #737373
+    --greyColor: #737373;
+    --animation: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .desktop{
@@ -72,4 +73,9 @@ nav> ul > li {
     box-sizing: border-box;
     text-align: center;
     border-bottom: 3px solid var(--greyColor);
+}
+
+.destaque{
+    color: var(--principalColor);
+    font-weight: bold;
 }
