--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -22,3 +22,19 @@
     transition: all .4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     background-color: var(--principalColor);
 }
+
+.campo{
+    display: flex;
+    flex-direction: column;
+}
+
+.campo > label{
+    font-size: 1.3em;
+}
+
+.campo > input[type="text"], input[type="email"]{
+    padding: 5px;
+    box-sizing: border-box;
+    border: 4px solid black;
+
+}
