--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -48,10 +48,13 @@
 #squareMaterial {
     height: 200px;
     border: 3px solid var(--blackColor);
+    overflow-y: scroll;
 }
 
 .materialContainer{
     background-color: var(--principalColor);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.568);
+
     margin: 5px;
     box-sizing: border-box;
     padding: 5px;
@@ -61,5 +64,19 @@
 
 .componentMaterial{
     display: flex;
-    align-items: end;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.componentMaterial > input[type="checkbox"]{
+    width: 25px;
+    height: 25px;
+}
+
+.componentMaterial input[type="number"]{
+    border: 3px solid var(--blackColor);
+}
+
+.componentMaterial:nth-child(2){
+    margin-top: 15px;
 }
