--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -46,7 +46,8 @@
 }
 /*Empresa*/
 #squareMaterial {
-    height: 200px;
+    height: 300px;
+    max-width: 500px;
     border: 3px solid var(--blackColor);
     overflow-y: scroll;
 }
@@ -55,11 +56,12 @@
     background-color: var(--principalColor);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.568);
 
-    margin: 5px;
+    margin: 5px 5px 20px 5px;
     box-sizing: border-box;
     padding: 5px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .componentMaterial{
@@ -77,6 +79,21 @@
     border: 3px solid var(--blackColor);
 }
 
-.componentMaterial:nth-child(2){
-    margin-top: 15px;
+input[type="submit"]{
+    margin-top: 10px;
+    width: 100%;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 1.5em;
+    color: white;
+    background-color: var(--principalColor);
+    border: none;
+}
+
+
+input[type="submit"]:hover{
+    background-color: var(--whiteColor);
+    color: var(--principalColor);
+    transition: all .4s var(--animation);
+    border: 3px solid var(--principalColor);
 }
