--- a/CSS/geral/geral.css
+++ b/CSS/geral/geral.css
@@ -14,6 +14,10 @@
     --animation: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
+.none{
+    display: none;
+}
+
 .desktop{
     display: none;
 }
