--- a/CSS/geral/geral.css
+++ b/CSS/geral/geral.css
@@ -65,7 +65,7 @@ main{
     font-size: 1.3em;
 }
 
-nav{
+.navBar{
     background-color: var(--blackColor);
     color: var(--principalColor);
     font-weight: normal;
@@ -74,7 +74,7 @@ nav{
     display: none;
 }
 
-nav> ul > li {
+.navBar> ul > li {
     list-style: none;
     padding: 10px;
     box-sizing: border-box;
