--- a/CSS/geral/geral.css
+++ b/CSS/geral/geral.css
@@ -14,6 +14,10 @@
     --animation: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
+#squareBonecos{
+    display: none;
+}
+
 .desktop{
     display: none;
 }
@@ -48,14 +52,6 @@ h1{
     font-size: 4em;
     padding: 15px;
 }
-
-
-main{
-    margin: 130px 15px 15px 15px;
-    display: flex;
-    flex-direction: column;
-}
-
 
 .textBasic{
     color: var(--greyColor);
@@ -92,4 +88,37 @@ nav> ul > li:hover{
 .destaque{
     color: var(--principalColor);
     font-weight: bold;
+}
+
+@media screen and (min-width: 500px) {
+
+    header{
+        height: 90px;
+    }
+    
+    #menuBtn{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    header{
+        display: flex;
+        flex-direction: row;
+        padding: 10px;
+        box-sizing: border-box;
+    }
+
+    nav{
+        position: fixed;
+        height: 100%;
+        width: 30vw;
+        right: 0px;
+        top: 0px;
+    }
+    
+    
+    .desktop{
+        display: block;
+    }
 }
