--- a/CSS/geral/geral.css
+++ b/CSS/geral/geral.css
@@ -26,18 +26,19 @@ header{
     background-color: var(--blackColor);
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
+    z-index: 999;
 }
 
 h1{
     color: white;
     font-weight: bold;
-    text-align: center;
     padding: 15px 0px;
 }
 
@@ -90,7 +91,7 @@ nav> ul > li:hover{
     font-weight: bold;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 1200px) {
 
     header{
         height: 90px;
