--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -1,5 +1,16 @@
 @import url('../geral/geral.css');
 
+#containerMain{
+    margin-top: 150px;
+}
+
+main{
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+
+
 .buttonsLine{
     margin: 0 auto;
     width: 90%;
@@ -33,8 +44,8 @@
 
 .campo > label{
     font-size: 1.3em;
-    background-color: var(--blackColor);
-    color: var(--principalColor);
+    background-color:var(--principalColor) ;
+    color: var(--blackColor);
     margin-top: 5px;
     width: 200px;
     border-radius: 5px 5px 0px 0px;
@@ -45,40 +56,6 @@
 .campo > input[type="text"], input[type="email"]{
     padding: 15px;
     box-sizing: border-box;
-    border: 3px solid var(--blackColor);
-}
-/*Empresa*/
-#squareMaterial {
-    height: 300px;
-    max-width: 500px;
-    border: 3px solid var(--blackColor);
-    overflow-y: scroll;
-}
-
-.materialContainer{
-    background-color: var(--principalColor);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.568);
-
-    margin: 5px 5px 20px 5px;
-    box-sizing: border-box;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.componentMaterial{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.componentMaterial > input[type="checkbox"]{
-    width: 25px;
-    height: 25px;
-}
-
-.componentMaterial input[type="number"]{
     border: 3px solid var(--blackColor);
 }
 
@@ -121,13 +98,15 @@ form{
     width: 200px;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 1200px) {
     main{
         margin-top: 90px;
         min-height: 100vh;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        margin: 0;
+        padding: 0;
     }
     
     .mobile{
@@ -136,10 +115,16 @@ form{
 
     #containerMain{
         width: 60%;
+        height: 100vh;
         background-color: #D9D9D9;
         padding: 15px;
         box-sizing: border-box;
+        padding-bottom: none;
+        display: block;
+        margin-top: 90px;
     }
+
+    
 
     #squareBonecos{
         display: flex;
@@ -148,9 +133,29 @@ form{
     
     .buttonsLine{
         width: 100%;
+        display: flex;
+        align-items: end;
+        align-items: center;
+        justify-content: flex-start;
+        margin: 40px 0px;
     }
 
     .SquareEffect{
-        background-color: red;
+        background-color: white;
+        border: 3px solid black;
+        position: relative;
+        height: 100%;
+        width: 100%;
+        margin-right: 150px;
+    }
+
+    .btnComputer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        bottom: -20px;
+        left: 20px;
+        height: 100%;
     }
 }
