--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -9,8 +9,6 @@ main{
     box-sizing: border-box;
 }
 
-
-
 .buttonsLine{
     margin: 0 auto;
     width: 90%;
@@ -98,6 +96,14 @@ form{
     width: 200px;
 }
 
+
+.selectedInput > input{
+    font-weight: bold;
+    font-size: 1.5em;
+    width: 200px;
+    text-align: center;
+}
+
 @media screen and (min-width: 1200px) {
     main{
         margin-top: 90px;
@@ -115,7 +121,7 @@ form{
 
     #containerMain{
         width: 60%;
-        height: 100vh;
+        min-height: 100vh;
         background-color: #D9D9D9;
         padding: 15px;
         box-sizing: border-box;
