--- a/CSS/geral/geral.css
+++ b/CSS/geral/geral.css
@@ -14,6 +14,19 @@
     --animation: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
+#closeMenu {
+    margin: 5px 0px;
+    margin-left: 5px;
+    padding: 5px;
+    box-sizing: border-box;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    text-decoration: none;
+}
+
 #squareBonecos{
     display: none;
 }
@@ -60,15 +73,12 @@ h1{
 }
 
 nav{
-    background-color: var(--blackColor);
-    color: var(--principalColor);
+    background-color: var(--principalColor);
+    color: var(--blackColor);
     font-weight: normal;
     width: 100%;
     box-sizing: border-box;
     display: none;
-}
-nav> ul > li:nth-child(1){
-    border-top: 3px solid var(--greyColor);
 }
 
 nav> ul > li {
@@ -76,13 +86,13 @@ nav> ul > li {
     padding: 10px;
     box-sizing: border-box;
     text-align: center;
-    border-bottom: 3px solid var(--greyColor);
     cursor: pointer;
+    text-decoration: underline;
 }
 
 nav> ul > li:hover{
-    background-color: var(--principalColor);
-    color: var(--blackColor);
+    background-color: var(--blackColor);
+    color: var(--principalColor);
     transition: all .4s var(--animation);
 }
 
