--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -104,6 +104,10 @@ form{
     text-align: center;
 }
 
+.btnComputer{
+    display: none;
+}
+
 @media screen and (min-width: 1200px) {
     main{
         margin-top: 90px;
@@ -153,6 +157,7 @@ form{
         height: 100%;
         width: 100%;
         margin-right: 150px;
+        display: block;
     }
 
     .btnComputer{
