--- a/CSS/geral/geral.css
+++ b/CSS/geral/geral.css
@@ -97,6 +97,10 @@ nav> ul > li:hover{
     transition: all .4s var(--animation);
 }
 
+nav> ul > li > a {
+    color: var(--whiteColor);
+}
+
 .destaque{
     color: var(--principalColor);
     font-weight: bold;
