--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -117,21 +117,34 @@ form{
     height: 100%;
     background: linear-gradient(120deg, rgb(0, 255, 157), rgb(11, 122, 59));
     transform: translateY(90px);
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
-    padding-top: 200px;
 }
 
 #imgBackground h2{
     font-size: 3em;
     font-weight: bolder;
     color: var(--whiteColor);
+    color: var(--principalColor);
+}
+
+#personSelected{
+    background-color: var(--whiteColor);
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    text-align: center;
+    display: none;
 }
 
 @media screen and (min-width: 1200px) {
+    #imgBackground{
+        display: flex;
+    }
+
     main{
         margin-top: 90px;
         min-height: 100vh;
