--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -134,6 +134,9 @@ form{
     text-align: center;
     position: fixed;
     top: 0;
+    font-size: 1.5em;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 1200px) {
