--- a/CSS/geral/geral.css
+++ b/CSS/geral/geral.css
@@ -9,7 +9,7 @@
 :root{
     --blackColor: black;
     --whiteColor: white;
-    --principalColor: #2AB64D;
+    --principalColor: #119396;
     --greyColor: #737373;
     --animation: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
