--- a/CSS/geral/geral.css
+++ b/CSS/geral/geral.css
@@ -14,6 +14,10 @@
     --animation: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
+button, div, input[type="submit"] {
+    border-radius: 10px;
+}
+
 #closeMenu {
     margin: 5px 0px;
     margin-left: 5px;
@@ -66,6 +70,7 @@ h1{
     color: var(--blackColor);
     font-size: 4em;
     padding: 15px;
+    border: none;
 }
 
 .textBasic{
@@ -74,51 +79,66 @@ h1{
 }
 
 nav{
-    background-color: white;
+    background: linear-gradient(to bottom, black  , transparent 30%);
     color: var(--blackColor);
     font-weight: normal;
     width: 100%;
     box-sizing: border-box;
     display: none;
     position: fixed;
-    width: 70%;
+    width: 30%;
     height: 100vh;
     right: 0;
     top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: baseline;
+    flex-direction: column;
 }
 
-nav> ul > li:nth-child(2){
-    border-top: 3px solid var(--blackColor);
+nav > ul{
+    width: 90%;
+    margin-top: 40px;
 }
 
 nav> ul > li {
     list-style: none;
-    padding: 10px;
+    background-color: var(--principalColor);
+    margin: 15px 5px;
     box-sizing: border-box;
-    text-align: center;
-    cursor: pointer;
-    text-decoration: underline;
-    border-bottom: 3px solid var(--blackColor) ;
-}
-
-nav> ul > li{
-    list-style: none;
     padding: 10px;
-    box-sizing: border-box;
-    text-align: center;
+    font-size: 1.5em;
+    height: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border-radius: 20px;
+    transition: all .4s var(--animation);
     cursor: pointer;
-    text-decoration: underline;
-    border-bottom: 3px solid var(--blackColor) ;
 }
 
 nav> ul > li:hover{
-    background-color: var(--blackColor);
+    transform: translateY(-10px);
     transition: all .4s var(--animation);
+}
+
+nav> ul > li > a{
+    color: var(--blackColor);
 }
 
 .destaque{
     color: var(--principalColor);
     font-weight: bold;
+}
+
+#menuBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border: none;
 }
 
 @media screen and (min-width: 1200px) {
@@ -131,6 +151,8 @@ nav> ul > li:hover{
         display: flex;
         align-items: center;
         justify-content: center;
+        width: 50px;
+
     }
 
     header{
