--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -54,7 +54,8 @@ main{
 .campo > input[type="text"], input[type="email"]{
     padding: 15px;
     box-sizing: border-box;
-    border: 3px solid var(--blackColor);
+    border: 2px solid var(--blackColor);
+    border-radius: 0px 5px 5px 0px;
 }
 
 input[type="submit"]{
