--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -4,6 +4,11 @@
     margin-top: 150px;
 }
 
+img{
+    width: 100%;
+    height: 100%;
+}
+
 main{
     padding: 20px;
     box-sizing: border-box;
@@ -124,6 +129,10 @@ form{
     justify-content: space-between;
     box-sizing: border-box;
     padding-top: 200px;
+    background-image: none;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #imgBackground h2{
