--- a/CSS/sobre/sobre.css
+++ b/CSS/sobre/sobre.css
@@ -7,6 +7,7 @@ header{
     width: 100vw;
     height: 60vh;
     position: relative;
+    transition: .4s all var(--animation);
 }
 
 .imgContainer{
@@ -56,6 +57,16 @@ header{
     border-radius: 50%;
     width: 70px;
     height: 70px;
+    transition: .4s all var(--animation);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btnSlideMove:hover{
+    transition: .4s all var(--animation);
+    border: 3px solid var(--principalColor);
 }
 
 .btnCareer{
