--- a/CSS/sobre/sobre.css
+++ b/CSS/sobre/sobre.css
@@ -80,3 +80,134 @@ header{
     background-color: white;
     border: none;
 }
+
+h2{
+    background-color: var(--blackColor);
+    padding: 15px;
+    border-radius: 30px;
+    color: var(--principalColor);
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 25px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.568);
+}
+main{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 350px;
+}
+
+p{
+    background-color: var(--blackColor);
+    padding: 15px;
+    border-radius: 20px;
+    margin: 5px;
+    color: var(--whiteColor);
+    font-size: 1.5em;
+}
+
+.secClassMain{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    background-color: white;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 10px 0px;
+}
+
+img{
+    width: 100%;
+    height: 50%;
+}
+
+
+.ImgsComponent > img[src="../../img/75B96F47-9369-422D-910D-D576B6DDEA13.png"]{
+    width: 100%;
+}
+
+.ImgsComponent > img[src="../../img/IMG_7547.PNG"]{
+    height: 60%;
+}
+
+.component{
+    margin: 0 auto;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.ImgsComponent{
+    height: 500px;
+    width: 30%;
+}
+
+.verMais{
+    background: linear-gradient(120deg, rgb(23, 103, 150), var(--principalColor));
+    color: white;
+    width: 200px;
+    padding: 10px;
+    box-sizing: border-box;
+    margin-left: 10px;
+    border: none;
+}
+
+.verMais > a {
+    color: white;
+    font-weight: bold;
+    font-size: 1em;
+}
+
+#containerInfo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column ;
+}
+
+.square{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--blackColor);
+    padding: 10px;
+    box-sizing: border-box;
+    width: 200px;
+    margin: 10px 0px;
+}
+
+.buttonBe{
+    background: linear-gradient(120deg, rgb(70, 150, 23), rgb(11, 90, 11));
+    border: none;
+    width: 100%;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+.buttonBe > a{
+    color: white;
+}
+
+@media screen and (min-width: 1000px) {
+    .secClassMain{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    main{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding-top: 250px;
+    }
+
+    .flexSquare{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 60%;
+    }
+}
