--- a/CSS/sobre/sobre.css
+++ b/CSS/sobre/sobre.css
@@ -90,6 +90,7 @@ h2{
     text-align: center;
     margin-bottom: 25px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.568);
+    height: 100%;
 }
 main{
     display: flex;
@@ -98,13 +99,13 @@ main{
     padding-top: 350px;
 }
 
-p{
+p.sentences{
     background-color: var(--blackColor);
     padding: 15px;
     border-radius: 20px;
     margin: 5px;
     color: var(--whiteColor);
-    font-size: 1.5em;
+    font-size: 1em;
 }
 
 .secClassMain{
@@ -134,9 +135,10 @@ img{
 
 .component{
     margin: 0 auto;
-    width: 50%;
+    width: 80%;
     display: flex;
     flex-direction: column;
+    background-color: red;
 }
 
 
@@ -209,5 +211,10 @@ img{
         flex-direction: row;
         justify-content: space-between;
         width: 60%;
+    }
+
+    .component{
+        display: flex;
+        flex-direction: row;
     }
 }
