--- a/CSS/sobre/sobre.css
+++ b/CSS/sobre/sobre.css
@@ -138,7 +138,6 @@ img{
     width: 80%;
     display: flex;
     flex-direction: column;
-    background-color: red;
 }
 
 
@@ -173,11 +172,18 @@ img{
 .square{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     background-color: var(--blackColor);
     padding: 10px;
     box-sizing: border-box;
     width: 200px;
     margin: 10px 0px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.548);
+}
+
+.square img{
+    height: 200px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .buttonBe{
