--- a/CSS/login/geralLog.css
+++ b/CSS/login/geralLog.css
@@ -1,9 +1,4 @@
 @import url('../geral/geral.css');
-
-#containerMain{
-    margin-top: 150px;
-}
-
 img{
     width: 100%;
     height: 100%;
@@ -126,7 +121,7 @@ form{
     width: 40%;
     position: fixed;
     right: 0;
-    bottom: 0;
+    top: 0;
     z-index: 888;
     height: 100%;
     transform: translateY(90px);
