--- a/CSS/geral/geral.css
+++ b/CSS/geral/geral.css
@@ -57,6 +57,7 @@ header{
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+    height: 100px;
     align-items: center;
     padding: 10px;
     box-sizing: border-box;
