--- a/CSS/style.css
+++ b/CSS/style.css
@@ -66,6 +66,10 @@ main{
     transform: scale(0.9);
 }
 
+.back{
+    width: 200px;
+}
+
 @media screen and (min-width: 600px){
     main{
         flex-direction: row;
