--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,10 +1,16 @@
 #container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-    margin-top: 150px;
-    padding: 50px;
+    margin-top: 80px;
     box-sizing: border-box;
+
+}
+
+main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .imgLog{
@@ -19,7 +25,7 @@
 
 .option{
     background-color: rgb(195, 195, 195);
-    width: 100%;
+    width: 300px;
     margin: 10px;
     border-radius: 15px;
     padding: 10px;
@@ -39,4 +45,15 @@
     transition: all .4s cubic-bezier(0.19, 1, 0.22, 1);
     background-color: rgb(29, 134, 5);
     color: white;
+}
+
+@media screen and (min-width: 500px) {
+    #container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 80px;
+        padding: 50px;
+        box-sizing: border-box;
+    }
 }
