--- a/CSS/login.css
+++ b/CSS/login.css
@@ -2,13 +2,18 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 80px;
+    margin-top: 10px;
     box-sizing: border-box;
 
 }
 
+h1{
+    margin-top: 30px;
+}
+
 main{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
