--- a/CSS/login.css
+++ b/CSS/login.css
@@ -53,6 +53,10 @@ main{
     color: white;
 }
 
+.row_noBetween{
+    display: flex;
+}
+
 @media screen and (min-width: 500px) {
     #container{
         display: flex;
